# ferrisquote

./: .env.example  Cargo.toml  README.md  compose.yaml
apps/: README.md
apps/api/: Cargo.toml
apps/api/src/: args.rs  errors.rs  main.rs  response.rs  router.rs  state.rs
apps/ferrisquote-api/: .env.example  Cargo.toml  README.md
apps/ferrisquote-api/src/: error.rs  main.rs  openapi.rs  state.rs
apps/ferrisquote-api/src/dto/: bindings.rs  estimators.rs  evaluation.rs  flows.rs  mod.rs  submissions.rs
apps/ferrisquote-api/src/handlers/: binding_handlers.rs  estimator_handlers.rs  evaluation_handlers.rs  field_handlers.rs  flow_handlers.rs  mappers.rs  mod.rs  step_handlers.rs  submission_handlers.rs
apps/ferrisquote-api/src/routes/: binding_routes.rs  build_routes.rs  estimator_routes.rs  evaluation_routes.rs  flow_routes.rs  mod.rs  submission_routes.rs
apps/ferrisquote-webapp/: README.md  components.json  index.html  package.json  pnpm-lock.yaml
apps/ferrisquote-webapp/src/: App.css  App.jsx  index.css  main.jsx
apps/ferrisquote-webapp/src/api/: api-error.ts  api.client.ts  api.tanstack.ts  bindings.api.ts  estimators.api.ts  fetcher.ts  flows.api.ts  index.ts  query-client.ts
apps/ferrisquote-webapp/src/components/: help-hint.tsx  language-switcher.tsx
apps/ferrisquote-webapp/src/components/layouts/: layout.tsx  nav-sidebar.tsx  right-sidebar.tsx
apps/ferrisquote-webapp/src/components/ui/: switch.tsx
apps/ferrisquote-webapp/src/i18n/: index.ts
apps/ferrisquote-webapp/src/locales/en/: translation.json
apps/ferrisquote-webapp/src/locales/fr/: translation.json
apps/ferrisquote-webapp/src/pages/flows/: page-flows.tsx
apps/ferrisquote-webapp/src/pages/flows/feature/: estimator-draft-store.ts  flow-canvas.tsx  flow-edit-panel.tsx  flow.mock.ts  flow.types.ts  flows.api.ts  page-flow-canvas.tsx
apps/ferrisquote-webapp/src/pages/flows/hooks/: use-canvas-drag-drop.ts  use-delete-dialogs.ts  use-linking-mode.ts  use-pending-focus.ts  use-step-reorder.ts
apps/ferrisquote-webapp/src/pages/flows/lib/: expression-parser.ts  expression-refs.ts  flow-diagnostics.ts
apps/ferrisquote-webapp/src/pages/flows/ui/: canvas-toolbar.tsx  diagnostics-overlay.tsx  estimator-node.tsx  field-node.tsx  flow-edit-sheet.tsx  flow-list-drawer.tsx  flow-node.tsx  flow-test-dialog.tsx  node-description-tooltip.tsx  step-node.tsx
apps/ferrisquote-webapp/src/pages/flows/ui/edit-panel/: add-field-form.tsx  add-step-form.tsx  edit-field-form.tsx  estimator-details-panel.tsx  expression-builder.tsx  field-config-form.tsx  input-card.tsx  output-card.tsx  panel-header.tsx  panel-state.ts  step-details-panel.tsx  step-repeatable-config.tsx  variable-card.tsx
apps/ferrisquote-webapp/src/pages/home/: page-home.tsx
apps/ferrisquote-webapp/src/routes/: router.ts
apps/ferrisquote-webapp/src/routes/sub-router/: flow.router.ts
apps/ferrisquote-webapp/src/store/: auth.store.ts  flow.store.ts
apps/ferrisquote-webapp/src/styles/: inputs.scss
docker/: create-dummy-sources.sh
libs/: README.md
libs/ferrisquote-auth/: Cargo.toml  README.md
libs/ferrisquote-auth/src/domain/: entities.rs  error.rs  ports.rs
libs/ferrisquote-auth/src/domain/entities/: claims.rs  client.rs  identity.rs  token.rs  user.rs
libs/ferrisquote-auth/src/infrastructure/: ferriskey_repository.rs  mod.rs
libs/ferrisquote-core/: Cargo.toml
libs/ferrisquote-domain/: Cargo.toml  README.md
libs/ferrisquote-domain/src/: lib.rs
libs/ferrisquote-domain/src/domain/: error.rs  evaluation.rs  flows.rs  mod.rs
libs/ferrisquote-domain/src/domain/estimator/: entities.rs  ports.rs  services.rs
libs/ferrisquote-domain/src/domain/estimator/entities/: estimator.rs  id.rs  ids.rs  output.rs  parameter.rs  submission.rs  variable.rs
libs/ferrisquote-domain/src/domain/evaluation/: ports.rs  random.rs  services.rs
libs/ferrisquote-domain/src/domain/flows/: entities.rs  ports.rs  services.rs
libs/ferrisquote-domain/src/domain/flows/entities/: binding.rs  field.rs  flow.rs  id.rs  ids.rs  step.rs
libs/ferrisquote-domain/src/domain/rank/: entities.rs  ports.rs  services.rs
libs/ferrisquote-domain/src/domain/submission/: entities.rs  ports.rs  services.rs
libs/ferrisquote-domain/src/domain/submission/entities/: answer.rs  answer_value.rs  field_value.rs  id.rs  step_iteration.rs  submission.rs
libs/ferrisquote-domain/src/domain/user/: entities.rs  ports.rs  services.rs
libs/ferrisquote-domain/src/domain/user/entities/: id.rs  user.rs
libs/ferrisquote-postgres/: Cargo.toml  README.md
libs/ferrisquote-postgres/migrations/: 20260218152555_create_flows_table.down.sql  20260218152555_create_flows_table.up.sql  20260218152918_create_steps_table.down.sql  20260218152918_create_steps_table.up.sql  20260218153128_create_fields_table.down.sql  20260218153128_create_fields_table.up.sql  20260323133231_create_estimators_table.down.sql  20260323133231_create_estimators_table.up.sql  20260323133232_create_estimator_variables_table.down.sql  20260323133232_create_estimator_variables_table.up.sql  20260413000000_add_step_repeatable_columns.down.sql  20260413000000_add_step_repeatable_columns.up.sql  20260418000000_create_users_table.up.sql  20260420000000_create_submissions_table.up.sql  20260421000000_estimator_signatures.down.sql  20260421000000_estimator_signatures.up.sql  20260421120000_flow_bindings.down.sql  20260421120000_flow_bindings.up.sql
libs/ferrisquote-postgres/src/: lib.rs
libs/ferrisquote-postgres/src/repositories/: estimator_repository.rs  flow_repository.rs  mod.rs  submission_repository.rs  user_repository.rs
