[package]
name = "ferrisquote-api"
description = "API for FerrisQuote"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
axum = "0.8.8"
axum-server = "0.8.0"
clap = { version = "4.5.57", features = ["derive", "env"] }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
utoipa = "5.4.0"
