[package]
name = "ferrisquote-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
ferrisquote-domain = { path = "../../libs/ferrisquote-domain" }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.20", features = ["v7", "serde"] }

# Environment variables
dotenvy = "0.15"
ferrisquote-postgres = { version = "0.1.0", path = "../../libs/ferrisquote-postgres" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

[dev-dependencies]
http-body-util = "0.1"
