[package]
name = "ferrisquote-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
ferrisquote-domain = { path = "../../libs/ferrisquote-domain" }

# Web framework
axum = "0.8.8"
axum-macros = "0.5.0"
tower = "0.4"
tower-http = { version = "0.6.8", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.10"
lazy_static = "1.4"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.20", features = ["v7", "serde"] }

# Environment variables
dotenvy = "0.15"
ferrisquote-postgres = { version = "0.1.0", path = "../../libs/ferrisquote-postgres" }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
http-body-util = "0.1"
