[package]
name = "ferrisquote-auth"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = "0.4.43"
jsonwebtoken = { version = "10.1.0", features = ["aws_lc_rs"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
