[package]
name = "ferrisquote-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0"
uuid = { version = "1.20.0", features = ["v4", "v7", "serde"] }
