[package]
name = "ferrisquote-postgres"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
ferrisquote-domain = { path = "../ferrisquote-domain" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.20", features = ["v7", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
